[tool.poetry]
name = "Minecraft Text Helper"
version = "1.0"
description = "The Minecraft text helper on the programming language Python."
authors = ["Delitanast <delitanast@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
